--- a/src/ArchiDesignPatterns.Mobile/Pages/DesignPatterns/IteratorPatternPage.xaml
+++ b/src/ArchiDesignPatterns.Mobile/Pages/DesignPatterns/IteratorPatternPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ArchiDesignPatterns.Mobile.ViewModels"
@@ -22,7 +21,7 @@
                                 Padding="8,4" StrokeThickness="0"
                                 StrokeShape="RoundRectangle 6"
                                 HorizontalOptions="Start">
-                            <Label Text="Behavioral" FontSize="11"
+                            <Label Text="Comportemental" FontSize="11"
                                    FontAttributes="Bold" TextColor="White" />
                         </Border>
                     </VerticalStackLayout>
@@ -45,7 +44,7 @@
                     <VerticalStackLayout Spacing="16">
                         <HorizontalStackLayout Spacing="8">
                             <Label Text="🎮" FontSize="20" VerticalOptions="Center" />
-                            <Label Text="Interactive Example"
+                            <Label Text="Exemple interactif"
                                    Style="{StaticResource SubTitle}"
                                    TextColor="{StaticResource Primary}"
                                    VerticalOptions="Center" />
@@ -66,7 +65,7 @@
                         </HorizontalStackLayout>
                         <BoxView Style="{StaticResource Divider}" Margin="0,0" />
                         <Editor Style="{StaticResource CodeEditor}"
-                                Text="public class MyCollection { public int[] Data = {1,2,3}; public IEnumerator&lt;int&gt; GetEnumerator() =&gt; ((IEnumerable&lt;int&gt;)Data).GetEnumerator(); }" />
+                                Text="// Collection personnalisée&#x0a;public class MyCollection&#x0a;{&#x0a;    public int[] Data = { 1, 2, 3 };&#x0a;    public IEnumerator&lt;int&gt; GetEnumerator() =&gt; ((IEnumerable&lt;int&gt;)Data).GetEnumerator();&#x0a;}" />
                     </VerticalStackLayout>
                 </Border>
             </VerticalStackLayout>
